--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,9 @@
 <meta charset="utf-8" />
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>My App</title>
+<title>Paste Post</title>
 <title>{{title}}</title>
+<link rel="icon" href="/img/only-b-02.png">
 <link rel="stylesheet" href="/css/main.css">
 <link rel="stylesheet" href="/css/react-draft-wysiwyg.css">
 <link rel="stylesheet" href="/css/site.css">
